allow cors for public domain